--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,16 @@
 .vscode/settings.json
 data.pickle
 NYPD_Complaint_Data_Historic.csv
+Visualizations/__pycache__/crime_pychart.cpython-38.pyc
+Visualizations/__pycache__/dataset.cpython-38.pyc
+Visualizations/__pycache__/dataset.cpython-39.pyc
+.gitignore
+Visualizations/__pycache__/day_graph.cpython-38.pyc
+.gitignore
+Visualizations/__pycache__/time_graph.cpython-38.pyc
+Visualizations/__pycache__/premise_description_graph.cpython-38.pyc
+Visualizations/__pycache__/vic_race.cpython-38.pyc
+Visualizations/hour
+Y_total.pickle
+X_total.pickle
+.~lock.NYPD_Complaint_Data_Historic.csv#
