Cleaned up the repository
Removed config files, pycache files, and pipenv files

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,6 @@
-
-.idea/discord.xml
-.idea/inspectionProfiles/Project_Default.xml
-.vscode/settings.json
+Models/datamodel-pytorch.py
 data.pickle
 NYPD_Complaint_Data_Historic.csv
-Visualizations/__pycache__/crime_pychart.cpython-38.pyc
-Visualizations/__pycache__/dataset.cpython-38.pyc
-Visualizations/__pycache__/dataset.cpython-39.pyc
-.gitignore
-Visualizations/__pycache__/day_graph.cpython-38.pyc
-.gitignore
-Visualizations/__pycache__/time_graph.cpython-38.pyc
-Visualizations/__pycache__/premise_description_graph.cpython-38.pyc
-Visualizations/__pycache__/vic_race.cpython-38.pyc
-Visualizations/hour
-Y_total.pickle
+
 X_total.pickle
-.~lock.NYPD_Complaint_Data_Historic.csv#
+Y_total.pickle
